app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld-app-deploy
  labels:
    app: helloworld-app
spec:
  selector:
    matchLabels:
      app: helloworld-app
  replicas: 1
  template:
    metadata:
      labels:
        app: helloworld-app
    spec:
      containers:
      - name: helloworld-app-container
        image: "quay.io/geoallen/quarkus:2.0"
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 8080
        resources:
          limits:
            cpu: 200m
            memory: 256Mi
          request:
            cpu: 50m
            memory: 64Mi
